[package]
authors = ["Tung Duong <vn.duongthanhtung@gmail.com>"]
description = "Simulated SIMD for Stable channel.\nEffort to make the `simd` crate work on stable channel.\n"
keywords = ["simd"]
name = "ssimd"
readme = "README.md"
repository = "https://github.com/vnduongthanhtung/ssimd"
license = "MIT/Apache-2.0"
version = "0.1.0"

[dependencies]

